...
                        enabled: false,
                        maxLines: 40,
                        minLines: 1,
                        style: TextStyle(color:Colors.white,fontSize: 22,height: 2.0),
                        decoration: InputDecoration(
                            border: OutlineInputBorder(),
                            hintText: 'En esta pestaña se mostrará como usar la aplicación de búsqueda de recetas.'
                                'Deberás introducir la palabra clave sobre la cual deseas obtener recetas que la contengan '
                                'en la barra de búsqueda, y una vez hecho esto, presionar la tecla ENTER. '
                                'El sistema se encargará de mostrarte las recetas que contienen esa palabra clave, o el error '
                                'correspondiente. !Muchas gracias por usar nuestra aplicación!'
                        ),
                  )),
...
                children: [Theme(data: ThemeData(disabledColor: Colors.black),child: const TextField(
                    textAlign: TextAlign.center,
                    enabled: false,
                    style: TextStyle(color:Colors.red,fontSize: 33),
                    decoration: InputDecoration(
                        border: OutlineInputBorder(),
                       hintText: 'Bienvenido a la pestaña de Opciones'
                    )
                ))
                ,const SizedBox(
                  height: 100,
                ),
                Image.asset(
...
