...
                      enabled: false,
                      minLines: 1,
                      maxLines: 45,
                      textAlign: TextAlign.center,
                      decoration: InputDecoration(
                          border: OutlineInputBorder(),
                          hintText: 'Su palabra no está relacionada con ninguna receta :('

                      ),
                      style: TextStyle(fontSize: 40),
                    ),
                    const SizedBox(
                      height: 50,
...
