...
                            color: Colors.deepPurple,
                            width: 5,
                          ),
                        ),
                        filled: true,
                        fillColor: Colors.white,
                        hintText: 'Error de red: No se ha podido establecer la conexión a internet.'
                            ' Compruebe su conexión a la red o inténtelo de nuevo más tarde.'
                    ),
                    enabled: false,
                  )
                ]
            )
...
