...
               style: const TextStyle(color: Colors.black,fontSize: 30),
               controller: _text,
               decoration: InputDecoration(
                   filled: true,
                   fillColor: Colors.white,
                   isDense: true,
                   errorText: _validate ? 'EL CAMPO NO PUEDE ESTAR VACIO' : null,
                   labelText: "Introduzca los datos",
                   hintText: "Recetas",
                   prefixIcon: IconButton(
                     icon: const Icon(Icons.arrow_back),
                     onPressed: () {
                       FocusManager.instance.primaryFocus?.unfocus();
...
